syntax = "proto3";

package chat;

// 用户服务
service UserService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
}

// 聊天服务
service ChatService {
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
    rpc GetMessages(GetMessagesRequest) returns (stream ChatMessage);
    rpc GetOnlineUsers(GetOnlineUsersRequest) returns (GetOnlineUsersResponse);
    rpc JoinRoom(JoinRoomRequest) returns (JoinRoomResponse);
    rpc LeaveRoom(LeaveRoomRequest) returns (LeaveRoomResponse);
}

// 用户相关消息
message User {
    string id = 1;
    string username = 2;
    string email = 3;
    string avatar = 4;
    bool is_online = 5;
    int64 created_at = 6;
    int64 updated_at = 7;
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
    User user = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    string message = 2;
    string token = 3;
    User user = 4;
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    bool success = 1;
    User user = 2;
}

message UpdateUserRequest {
    string user_id = 1;
    string username = 2;
    string avatar = 3;
}

message UpdateUserResponse {
    bool success = 1;
    string message = 2;
    User user = 3;
}

// 聊天相关消息
message ChatMessage {
    string id = 1;
    string user_id = 2;
    string username = 3;
    string content = 4;
    string room_id = 5;
    MessageType message_type = 6;
    int64 timestamp = 7;
}

enum MessageType {
    TEXT = 0;
    IMAGE = 1;
    FILE = 2;
    SYSTEM = 3;
}

message SendMessageRequest {
    string user_id = 1;
    string content = 2;
    string room_id = 3;
    MessageType message_type = 4;
}

message SendMessageResponse {
    bool success = 1;
    string message = 2;
    ChatMessage chat_message = 3;
}

message GetMessagesRequest {
    string room_id = 1;
    int32 limit = 2;
    int64 before_timestamp = 3;
}

message GetOnlineUsersRequest {
    string room_id = 1;
}

message GetOnlineUsersResponse {
    repeated User users = 1;
}

message JoinRoomRequest {
    string user_id = 1;
    string room_id = 2;
}

message JoinRoomResponse {
    bool success = 1;
    string message = 2;
}

message LeaveRoomRequest {
    string user_id = 1;
    string room_id = 2;
}

message LeaveRoomResponse {
    bool success = 1;
    string message = 2;
}
